fixed timetable showing up weirdly on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,10 @@
   .lessonText {
     font-size: 0.75vw;
   }
+
+  .dayCell {
+    width: 4vw;
+  }
  }
 
  /* Extra small devices (portrait phones, less than 576px) */
@@ -63,16 +67,25 @@
     justify-content: center;
   }
 
-  .timetableContainer {
-    width: 292.5vw;
-  }
-
   .timeSlot {
-    width: 292.5vw;
+    width: 18.6vw;
   }
 
   .lessonText {
-    font-size: 3vw;
+    font-size: 2.4vw;
+  }
+
+  .dayCell {
+    width: 12vw;
+  }
+
+  .timetableContainer {
+    overflow-x: scroll;
+  }
+
+  .timetableRow {
+    /* whole timetable is 4vw (day cell) + 6.2vw*15 = 97vw. Then multiply by 3 */
+    width: 291vw;
   }
  }
 
@@ -124,11 +137,11 @@
 
 .dayCell {
   background-color: #d47c7c;
-  width: 4vw;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content:center;
+  min-height: 12vh;
 }
 
 /* ============= For light mode and dark mode customisation ============= */
